--- a/demo/index.html
+++ b/demo/index.html
@@ -17,9 +17,7 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="bower_components/moment/moment.js"></script>
-    <script type="text/javascript" src="bower_components/moment/locale/de.js"></script>
-    <script type="text/javascript" src="bower_components/moment/locale/zh-cn.js"></script>
+    <script type="text/javascript" src="bower_components/sugar/release/sugar-full.development.js"></script>
     <script type="text/javascript" src="demo/demo-app.js"></script>
     <script type="text/javascript" src="demo/demo-controller.js"></script>
     <script type="text/javascript" src="src/js/datetimepicker.js"></script>
