Replace Glyphicon with Font Awesome

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,7 @@
     <title>Angular Bootstrap - Date Time Picker Demo</title>
     <base href="..">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="src/css/datetimepicker.css">
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -54,7 +55,7 @@
                    href="#">
                     <div class="input-group">
                         <input type="text" class="form-control" data-ng-model="data.dateDropDownInputNoFormatting">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -82,7 +83,7 @@
                    href="#">
                     <div class="input-group">
                         <input type="text" class="form-control" data-ng-model="data.dateDropDownInput">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -110,7 +111,7 @@
                    href="#">
                     <div class="input-group">
                         <input type="text" class="form-control" data-ng-model="data.inputOnTimeSet">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -156,7 +157,7 @@
                         <div class="input-group">
                             <input type="text" class="form-control" name="formDateValue" data-ng-required="true"
                                    data-ng-model="data.dateDropDownWithInput">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                         </div>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -317,7 +318,7 @@
                    href="#">
                     <div class="input-group">
                         <input type="text" class="form-control" data-ng-model="data.dateDropDownInputNoFormatting">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
